class Produto:
    def __init__(self,nome,preco,descricao,avaliacao):
        self.nome = nome
        self.preco = preco
        self.descricao = descricao
        self.avaliacao = avaliacao
